UtahLiveDataTest/src/objects/r_pcls__c.object
<CustomObject>
    <fields>
        <fullName>ACT_FL__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Active</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ALW_BUD_FL__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Budgeting</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EFBGN_DT__c</fullName>
        <label>Effective Begin Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>EFEND_DT__c</fullName>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ExternalFINETId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>PCLS_CD</description>
        <externalId>true</externalId>
        <label>ExternalFINETId</label>
        <length>4</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PCLS_CD__c</fullName>
        <label>Program Class Code</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCLS_DSCR__c</fullName>
        <label>Program Class Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCLS_NM__c</fullName>
        <label>Program Class Name</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PCLS_SH_NM__c</fullName>
        <label>Program Class Short Name</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <label>FINET Program Class</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Program Class Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FINET Program Classes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>